5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4369/executions/1649_2443.log
== TEST (2019-04-09 18:21:06) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
r = float(input("Digite o raio: "))
a = float(input("Digite a altura: "))
vArouVc = float(input(" Digite o opcao 1 ou 2: "))
vE = (4 * (pi * (r**3))) / 3 # volume da esfera
Va1 = ((pi * (a**2)) * ((3 * r) - a)) / 3 # Volume de ara é igual a volume da calota esférica
vC2 = vE - vCE #volume do combustível


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    vC2 = vE - vCE #volume do combustível
NameError: name 'vCE' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:24:03) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
r = float(input("Digite o raio: "))
a = float(input("Digite a altura: "))
opcoes = float(input(" Digite o opcao 1 ou 2: ")) # opções de volume de ar ou volume do combustível
vE = (4 * (pi * (r**3))) / 3 # volume da esfera
vA1 = ((pi * (a**2)) * ((3 * r) - a)) / 3 # Volume de ar é igual a volume da calota esférica
vC2 = vE - vA1 #volume do combustível
if(opcoes == 1):
	print(round(vA1, 2))


-- OUTPUT:
9.03
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:24:10) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
r = float(input("Digite o raio: "))
a = float(input("Digite a altura: "))
opcoes = float(input(" Digite o opcao 1 ou 2: ")) # opções de volume de ar ou volume do combustível
vE = (4 * (pi * (r**3))) / 3 # volume da esfera
vA1 = ((pi * (a**2)) * ((3 * r) - a)) / 3 # Volume de ar é igual a volume da calota esférica
vC2 = vE - vA1 #volume do combustível
if(opcoes == 1):
	print(round(vA1, 2))


-- OUTPUT:
9.03
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:25:00) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
r = float(input("Digite o raio: "))
a = float(input("Digite a altura: "))
opcoes = float(input(" Digite o opcao 1 ou 2: ")) # opções de volume de ar ou volume do combustível
vE = (4 * (pi * (r**3))) / 3 # volume da esfera
vA1 = ((pi * (a**2)) * ((3 * r) - a)) / 3 # Volume de ar é igual a volume da calota esférica
vC2 = vE - vA1 #volume do combustível
if(opcoes == 1):
	print(round(vA1, 4))
else:
	print(vC2)


-- OUTPUT:
9.0257
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:25:18) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
r = float(input("Digite o raio: "))
a = float(input("Digite a altura: "))
opcoes = float(input(" Digite o opcao 1 ou 2: ")) # opções de volume de ar ou volume do combustível
vE = (4 * (pi * (r**3))) / 3 # volume da esfera
vA1 = ((pi * (a**2)) * ((3 * r) - a)) / 3 # Volume de ar é igual a volume da calota esférica
vC2 = vE - vA1 #volume do combustível
if(opcoes == 1):
	print(round(vA1, 4))
else:
	print(round(vC2, 4)


-- ERROR:
File "XXXX", line 16
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:25:26) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
r = float(input("Digite o raio: "))
a = float(input("Digite a altura: "))
opcoes = float(input(" Digite o opcao 1 ou 2: ")) # opções de volume de ar ou volume do combustível
vE = (4 * (pi * (r**3))) / 3 # volume da esfera
vA1 = ((pi * (a**2)) * ((3 * r) - a)) / 3 # Volume de ar é igual a volume da calota esférica
vC2 = vE - vA1 #volume do combustível
if(opcoes == 1):
	print(round(vA1, 4))
else:
	print(round(vC2, 4))


-- OUTPUT:
9.0257
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 18:25:36) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
r = float(input("Digite o raio: "))
a = float(input("Digite a altura: "))
opcoes = float(input(" Digite o opcao 1 ou 2: ")) # opções de volume de ar ou volume do combustível
vE = (4 * (pi * (r**3))) / 3 # volume da esfera
vA1 = ((pi * (a**2)) * ((3 * r) - a)) / 3 # Volume de ar é igual a volume da calota esférica
vC2 = vE - vA1 #volume do combustível
if(opcoes == 1):
	print(round(vA1, 4))
else:
	print(round(vC2, 4))


-- EXECUTION TIME:
0.204021
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
9.0257
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
290.3408
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:56:04) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
r = float(input("Digite o raio: "))
a = float(input("Digite a altura: "))
opcoes = float(input(" Digite o opcao 1 ou 2: ")) # opções de volume de ar ou volume do combustível
vE = (4 * (pi * (r**3))) / 3 # volume da esfera
vA1 = ((pi * (a**2)) * ((3 * r) - a)) / 3 # Volume de ar é igual a volume da calota esférica
vC2 = vE - vA1 #volume do combustível
if(opcoes == 1):
	print(round(vA1, 4))
else:
	print(round(vC2, 4))


-- OUTPUT:
9.0257
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:56:17) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
r = float(input("Digite o raio: "))
a = float(input("Digite a altura: "))
opcoes = float(input(" Digite o opcao 1 ou 2: ")) # opções de volume de ar ou volume do combustível
vE = (4 * (pi * (r**3))) / 3 # volume da esfera
vA1 = ((pi * (a**2)) * ((3 * r) - a)) / 3 # Volume de ar é igual a volume da calota esférica
vC2 = vE - vA1 #volume do combustível
if(opcoes == 1):
	print(round(vA1, 4))
else:
	print(round(vC2, 4))


-- OUTPUT:
9.0257
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
